@@ -1,3 +1,6 @@
+03/27/2009
+- added extend resource
+
 03/26/2009
 - fixed parser not to create error on `word` in double quoted strings
 - allow PHP  array(...)
